[package]
edition = "2024"
name    = "hashery"
version = "0.0.1"

[features]
default = ["md5", "sha1", "sha2", "sha3", "blake2", "blake3"] # 开发时默认启用所有算法

# 基础哈希算法
blake2 = ["dep:blake2"]
blake3 = ["dep:blake3"]
md5    = ["dep:md-5"]
sha1   = ["dep:sha1"]
sha2   = ["dep:sha2"]
sha3   = ["dep:sha3"]

# 算法组合
all    = ["md5", "sha1", "sha2", "sha3", "blake2", "blake3"] # 启用所有算法
legacy = ["md5", "sha1"]                                     # 传统算法
modern = ["sha2", "sha3", "blake2", "blake3"]                # 现代/安全的算法

[dependencies]
# 提供统一的 Digest trait
digest        = "0.10.7"
tokio         = { version = "1.44.1", features = ["fs", "io-util", "rt-multi-thread", "macros"] }
typed-builder = "0.21.0"


blake2 = { version = "0.10.6", optional = true }
blake3 = { version = "1.8.1", optional = true }
md-5   = { version = "0.10.6", optional = true }
sha1   = { version = "0.10.6", optional = true }
sha2   = { version = "0.10.8", optional = true }
sha3   = { version = "0.10.8", optional = true }
